lab3/policies/require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-labels
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: [shop]
      validate:
        message: "Pod должен иметь метки 'app' и 'owner'"
        pattern:
          metadata:
            labels:
              app: "?*"
              owner: "?*"
