lab3/policies/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-containers-limits
      match:
        any:
          - resources:
              kinds: [Pod]
              namespaces: [shop]
      validate:
        message: "Все контейнеры должны иметь resources.limits (cpu и memory)"
        pattern:
          spec:
            containers:
              - resources:
                  limits:
                    memory: "?*"
                    cpu: "?*"
